--- a/content/posts/2025-07-31.md
+++ b/content/posts/2025-07-31.md
@@ -1,5 +1,6 @@
 +++
 date = '2025-07-31T23:11:29+01:00'
+draft = false
 title = '2025 07 31'
 +++
-Hey. lets check if github avtion are working
+Hey. lets check if github action are working
